<resources>
    <string name="app_name">RepetitionTest</string>
    <string name="strong_password_requirements">Password must have at least 8 characters, included uppercase, lowercase and numbers</string>
    <string name="verification_code_hint">code</string>
    <string name="phone_number">Phone number</string>
    <string name="submit_number">Submit number</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="save">Save</string>

    <!--    for intro page-->
    <string name="continue_intro">Continue</string>
    <string name="end_intro">Let\'s start</string>

    <!--    for sign up page-->
    <string name="confirm_sms_code">Confirmation</string>
    <string name="repetition_text">REPETITSION TEST</string>
    <string name="motivation_text">Achieve your dream\nwith us :)</string>
    <string name="sms_code_hint">SMS code</string>

    <!--    for sign in page-->
    <string name="please_wait_phone_number_is_checking">Iltimos kuting\nTelefon raqam tekshirilyapti</string>
    <string name="please_wait_account_is_creating">Iltimos kuting\nAkkount yaratilyapti</string>
    <string name="verification_code_sent_1">Tasdiqlash kodi </string>
    <string name="verification_code_sent_2"> raqamiga yuborildi</string>
    <string name="full_name">Full name</string>
    <string name="email">Email(optional)</string>
    <string name="role">Teacher, pupil, enrollee</string>
    <string name="forget_password">Forget password</string>

    <!--    for main page-->
    <string name="home">Asosiy</string>
    <string name="test">Test</string>
    <string name="history">Tarix</string>
    <string name="settings">Sozlamalar</string>

</resources>