<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.sign_in.SignInFragment">

    <View
        android:id="@+id/circle_view"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:layout_margin="@dimen/_50sdp"
        android:background="@drawable/circle_background"
        android:backgroundTint="@color/yellow"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_40sdp"
        android:text="@string/repetition_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/circle_view" />

    <TextView
        android:id="@+id/title_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_40sdp"
        android:text="@string/motivation_text"
        android:textAlignment="center"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_1" />

    <!--    phone number field-->
    <!--    start-->

    <EditText
        android:id="@+id/phone_number_et"
        android:layout_width="0dp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:paddingStart="@dimen/_25sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:textColorHint="@color/hint_color"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintLeft_toLeftOf="@id/guideline"
        app:layout_constraintRight_toRightOf="@id/sign_in_btn"
        app:layout_constraintTop_toBottomOf="@id/title_2" />

    <LinearLayout
        android:id="@+id/image_layout_1"
        android:layout_width="0dp"
        android:layout_height="@dimen/_35sdp"
        android:background="@drawable/icons_background"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@id/phone_number_et"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toLeftOf="@id/sign_in_btn"
        app:layout_constraintTop_toTopOf="@id/phone_number_et">

        <ImageView
            android:id="@+id/image_1"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/phone_number_icon" />

    </LinearLayout>

    <!--    end-->

    <!--    password field-->
    <!--    start-->

    <EditText
        android:id="@+id/password_et"
        android:layout_width="0dp"
        android:layout_height="@dimen/_30sdp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="@dimen/_25sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingEnd="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:textColorHint="@color/hint_color"
        android:textSize="@dimen/_12ssp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/image_layout_2"
        app:layout_constraintLeft_toLeftOf="@id/guideline"
        app:layout_constraintRight_toRightOf="@id/sign_in_btn"
        app:layout_constraintTop_toTopOf="@id/image_layout_2" />

    <ImageView
        android:id="@+id/password_eye"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_5sdp"
        android:src="@drawable/password_visible"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/password_et"
        app:layout_constraintRight_toRightOf="@id/password_et"
        app:layout_constraintTop_toTopOf="@id/password_et" />

    <LinearLayout
        android:id="@+id/image_layout_2"
        android:layout_width="0dp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/icons_background"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toLeftOf="@id/sign_in_btn"
        app:layout_constraintTop_toBottomOf="@id/image_layout_1">

        <ImageView
            android:id="@+id/image_2"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/password_icon" />

    </LinearLayout>

    <!--    end-->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.22" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_in_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_50sdp"
        android:layout_marginEnd="@dimen/_50sdp"
        android:layout_marginBottom="@dimen/_30sdp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/inter_regular"
        android:text="@string/common_signin_button_text"
        android:textAllCaps="false"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>