<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.sign_up.SavePersonalDataFragment">

    <LinearLayout
        android:id="@+id/back_btn"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_margin="@dimen/_20sdp"
        android:background="@drawable/circle_background"
        android:backgroundTint="@color/yellow"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="@dimen/_17sdp"
            android:layout_height="@dimen/_17sdp"
            android:src="@drawable/back_icon" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/profile_photo_layout"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/profile_photo_stroke"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_btn">


    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/circle_background"
        android:backgroundTint="@color/yellow"
        app:layout_constraintBottom_toBottomOf="@id/horizontal_2"
        app:layout_constraintLeft_toLeftOf="@id/vertical_1"
        app:layout_constraintRight_toRightOf="@id/vertical_2"
        app:layout_constraintTop_toTopOf="@id/horizontal_1">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_7sdp"
            android:src="@drawable/camera_icon" />

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.558" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6555" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.245" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.22" />

    <!--    full name field-->
    <!--    start-->

    <EditText
        android:id="@+id/full_name_et"
        android:layout_width="0dp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_50sdp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:paddingStart="@dimen/_25sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingEnd="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:textColorHint="@color/hint_color"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="@id/image_layout_1"
        app:layout_constraintLeft_toLeftOf="@id/guideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/image_layout_1" />

    <LinearLayout
        android:id="@+id/image_layout_1"
        android:layout_width="0dp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:background="@drawable/icons_background"
        android:gravity="center"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_photo_layout">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/full_name_icon" />

    </LinearLayout>

    <!--    end-->

    <!--    email field-->
    <!--    start-->

    <EditText
        android:id="@+id/email_et"
        android:layout_width="0dp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_50sdp"
        android:background="@drawable/edit_text_background"
        android:editable="false"
        android:hint="@string/email"
        android:inputType="none"
        android:paddingStart="@dimen/_25sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingEnd="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:textColorHint="@color/hint_color"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="@id/image_layout_2"
        app:layout_constraintLeft_toLeftOf="@id/guideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/image_layout_2" />

    <LinearLayout
        android:id="@+id/image_layout_2"
        android:layout_width="0dp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:background="@drawable/icons_background"
        android:gravity="center"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_layout_1">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/email_icon" />

    </LinearLayout>

    <!--    end-->

    <!--    role field-->
    <!--    start-->

    <EditText
        android:id="@+id/role_field"
        android:layout_width="0dp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_50sdp"
        android:background="@drawable/edit_text_background"
        android:editable="false"
        android:ellipsize="end"
        android:hint="@string/role"
        android:inputType="none"
        android:maxLines="1"
        android:paddingStart="@dimen/_25sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingEnd="@dimen/_50sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:textColorHint="@color/hint_color"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="@id/image_layout_3"
        app:layout_constraintLeft_toLeftOf="@id/guideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/image_layout_3" />

    <LinearLayout
        android:id="@+id/image_layout_3"
        android:layout_width="0dp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:background="@drawable/icons_background"
        android:gravity="center"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_layout_2">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/user_category_icon" />

    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:src="@drawable/down_icon"
        app:layout_constraintBottom_toBottomOf="@id/role_field"
        app:layout_constraintRight_toRightOf="@id/role_field"
        app:layout_constraintTop_toTopOf="@id/role_field" />

    <!--    end-->

    <LinearLayout
        android:id="@+id/prev_btn"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_margin="@dimen/_20sdp"
        android:background="@drawable/circle_background"
        android:backgroundTint="@color/yellow"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:layout_width="@dimen/_17sdp"
            android:layout_height="@dimen/_17sdp"
            android:src="@drawable/prev_icon" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>